Changelog
=========

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2012-04-05)
------------------

- Fix RSS-Feed format.
  [mathias.leimgruber]

- german translations
  [mathias.leimgruber]


1.0.2 (2012-04-02)
------------------

- Fix collective.portlet.collectionmultiview imports.
  [eschmutz]


1.0.1 (2012-03-05)
------------------

- Initial release
- news type based on simplelayout page
- add simple topic summary news view
